--- a/ST5220.ipynb
+++ b/ST5220.ipynb
@@ -21,7 +21,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "# ** Ignore this**"
+        "# ** Run and then Ignore this**"
       ]
     },
     {
