--- a/ST5220.ipynb
+++ b/ST5220.ipynb
@@ -473,7 +473,7 @@
         "    df_mean_mode_inpute =df.copy(deep=True)\n",
         "    \n",
         "    for n in range(iterations):\n",
-        "        print (n)\n",
+        "        print (n,'iterations'),\n",
         "        for i in quant_var[:] :\n",
         "            model = DecisionTreeRegressor(min_samples_split=30)\n",
         "            feat = [x for x in quant_var if x != i] + list(qual_var)\n",
@@ -536,7 +536,7 @@
         "outputId": "0629535f-8d5d-410f-8000-f989c40e8862",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 575
+          "height": 766
         }
       },
       "cell_type": "code",
@@ -548,11 +548,13 @@
         "    samplesize=6000\n",
         "    np.random.seed(5220)\n",
         "    for num_of_blocks in [2,3,4]:  #2,3,4 correpsond to 40,60,80 questions in survey\n",
-        "      for samplesize in [60000,12000,25000,100000][:]:\n",
-        "          print 'calculating, samplesize:',samplesize,'num_blocks:',num_blocks\n",
+        "      for samplesize in [6000,12000,25000,50000,100000][:]:\n",
+        "          print 'calculating, samplesize:',samplesize,'num_blocks:',num_of_blocks,\n",
         "          sample60k = data.sample(n=samplesize,replace=True)\n",
         "          sample60k['ori_index'] = sample60k.index\n",
-        "          sample60k = sample60k.sort_values('_STATE').reset_index(drop=True) #sort by state, to strafiy sampling by state\n",
+        "          #sort by state, to strafiy sampling by state to increase percision\n",
+        "          #ref Increasing Survey Statistics Precision Using Split Questionnaire Design: An Application of Small Area Estimation\n",
+        "          sample60k = sample60k.sort_values('_STATE').reset_index(drop=True) \n",
         "          Combinations_nC3 = list(combinations(range(num_block),num_of_blocks)) #nC3 combinations of the number of blocks. \n",
         "          dictt_interger_to_combinations = {}\n",
         "          np.random.shuffle(Combinations_nC3)\n",
@@ -563,8 +565,8 @@
         "          sample60k_ori = sample60k.copy(deep=True)#for validation, 'correct' answer\n",
         "          \n",
         "          #Initalize datafile with -99, where -99 denotes missing value due to survey split. \n",
+        "          sample60k[sample60k.keys()[:-2]] = sample60k[sample60k.keys()[:-2]]*0-99\n",
         "          sample60k['_STATE'] = sample60k_ori ['_STATE']\n",
-        "          sample60k[sample60k.keys()[:-2]] = sample60k[sample60k.keys()[:-2]]*0-99 \n",
         "          sample60k['ori_index'] = sample60k_ori['ori_index']\n",
         "          sample60k['block'] = sample60k_ori ['block']\n",
         "          for blockcomb in Combinations_nC3:\n",
@@ -578,12 +580,13 @@
         "                                               sample60k_ori[sample60k_ori['block']==blockcomb][questions_answered])\n",
         "          imputed60k,imputed60k_mean_mode = MICE(df = sample60k.copy(deep=True),qual_var = qual_var,quant_var = quant_var,iterations=10)\n",
         "          #normalized root mean squared error\n",
-        "          quant_result1 = np.mean(((imputed60k[quant_var]-sample60k_ori[quant_var])/np.std(sample60k_ori[quant_var],0))**2,0)**.5\n",
-        "          #percentage error in mean and var\n",
-        "          quant_result2 = abs((imputed60k[quant_var].describe().iloc[1:3]-sample60k_ori[quant_var].describe().iloc[1:3])/sample60k_ori[quant_var].describe().iloc[1:3])\n",
+        "          quant_result1 = np.mean(np.mean(((imputed60k[quant_var]-sample60k_ori[quant_var])/np.std(sample60k_ori[quant_var],0))**2,0)**.5)\n",
+        "          #average absolute percentage error in mean and var\n",
+        "          quant_result2 = np.mean(abs((imputed60k[quant_var].describe().iloc[1:3]-sample60k_ori[quant_var].describe().iloc[1:3])/sample60k_ori[quant_var].describe().iloc[1:3]),1)**2\n",
         "          #KL divergence  \n",
-        "          qual_result = map(lambda x : (x,KL_divergence(imputed60k,data,x)), qual_var[:]) \n",
-        "          result_MICE[(samplesize,num_of_blocks)]= (quant_result,quant_result2,qual_result);"
+        "          qual_result = np.mean(map(lambda x : KL_divergence(imputed60k,data,x), qual_var[:]) )\n",
+        "          result_MICE[(samplesize,num_of_blocks)]= (quant_result1,quant_result2,qual_result);\n",
+        "          print ('results:',(quant_result1,quant_result2,qual_result))"
       ],
       "execution_count": 0,
       "outputs": [
@@ -616,6 +619,17 @@
         {
           "output_type": "stream",
           "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "finished running with imputed values\n",
+            "0\n",
             "1\n",
             "2\n",
             "3\n",
