--- a/ST5220.ipynb
+++ b/ST5220.ipynb
@@ -690,6 +690,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Print results in friendly manner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for i in result_MICE.keys():\n",
+    "    print 'samplesize',i[0],'num_of_blocks',i[1],\n",
+    "    print 'average absolute percentage error in mean and var',result_MICE[i][1]\n",
+    "    print 'KL divergence',result_MICE[i][2],'\\n\\n\\n'\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -956,7 +979,7 @@
     }
    ],
    "source": [
-    "results_CSV = pd.read_csv('/home/leexa/Downloads/2019-02-13 09:59:05.400/results.csv')\n",
+    "results_CSV = pd.read_csv('results.csv')\n",
     "results_CSV[results_CSV.keys()[:6]]"
    ]
   },
@@ -964,7 +987,9 @@
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
