--- a/ST5220.ipynb
+++ b/ST5220.ipynb
@@ -547,6 +547,8 @@
    "source": [
     "# **5. Run experiments across different sample size/question block size and compare the kl-divergence and root-meansquare error (normalized by standard deviation)**\n",
     "\n",
+    "Run time ~ 8 hours\n",
+    "\n",
     "dummary variables : \n",
     "-999 are empty responses given \n",
     ",-99 are questions not attempted due to split questionair design\n"
@@ -622,7 +624,7 @@
     "    samplesize=6000\n",
     "    np.random.seed(5220)\n",
     "    for num_of_blocks in [2,3,4]:  #2,3,4 correpsond to 40,60,80 questions in survey\n",
-    "      for samplesize in [600,1200,2500,5000,10000][:]:\n",
+    "      for samplesize in [6000,12000,25000,50000,100000][:]:\n",
     "          print 'calculating, samplesize:',samplesize,'num_blocks:',num_of_blocks,\n",
     "          sample60k = data.sample(n=samplesize,replace=True)\n",
     "          sample60k['ori_index'] = sample60k.index\n",
